# SML_oder

src/GUI/: README.md  package.xml  setup.cfg  setup.py
src/GUI/config/: render_object_assets_6x8_from_json.py  sml_object_id_gui_assets_6x8.json  sml_worldcup_2026_layout.json
src/GUI/sml_worldcup_gui/: __init__.py  app.py
src/sml_msgs/: CMakeLists.txt  README.md  package.xml
src/sml_msgs/action/: NavTask.action  WbTask.action
src/sml_msgs/msg/: Order.msg  Station.msg  Step.msg  Task.msg
src/sml_msgs/srv/: ArmCommand.srv  GetPlan.srv
